Call script directly - no venv
Signed-off-by: Eddie Tillistrand <ejt4x@users.noreply.github.com>

--- a/dash.service
+++ b/dash.service
@@ -5,7 +5,7 @@ After=multi-user.target
 [Service]
 Type=simple
 Restart=always
-ExecStart=/opt/dash-monitor/venv/bin/python /opt/dash-monitor/dash_listen.py
+ExecStart=/opt/dash-monitor/dash_listen.py
 
 [Install]
 WantedBy=multi-user.target
